--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,9 @@ frozenlist==1.4.1
 idna==3.7
 magic-filter==1.0.12
 multidict==6.0.5
+psycopg2-binary==2.9.9
 pydantic==2.5.3
 pydantic_core==2.14.6
+python-dotenv==1.0.1
 typing_extensions==4.11.0
 yarl==1.9.4
